--- a/ProgBasiEclipse/WebContent/WEB-INF/web.xml
+++ b/ProgBasiEclipse/WebContent/WEB-INF/web.xml
@@ -28,14 +28,18 @@
 <!-- JSPC servlet mappings start -->
 
 <servlet>
-        <servlet-name>ServletFermata</servlet-name>
-        <servlet-class>ServletFermata</servlet-class>
+        <servlet-name>Main</servlet-name>
+        <servlet-class>Main</servlet-class>
     </servlet>
 
     <servlet-mapping>
-        <servlet-name>ServletFermata</servlet-name>
-        <url-pattern>/servlet/ServletFermata</url-pattern>
+        <servlet-name>Main</servlet-name>
+        <url-pattern>/servlet/Main</url-pattern>
     </servlet-mapping>
+    
+   	<welcome-file-list>  
+   	<welcome-file> Index.html </welcome-file>  
+  	</welcome-file-list>  
 
 <!-- JSPC servlet mappings end -->
 
